--- a/index.html
+++ b/index.html
@@ -1,14 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rock Paper Scissors</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
 
+  <div class="container">
+    <h1>Rock Paper Scissors</h1>
+    <div class="content">
+      <div class="buttons">
+        <button class="btn rock">Rock</button>
+        <button class="btn paper">Paper</button>
+        <button class="btn scissors">Scissors</button>
+      </div>
+    
+      <div class="info">
+        <p class="message"></p>
+  
+        <p class="player"></p>
+        <p class="computer"></p>
+  
+        <p class="final-result"></p>
+  
+        <button class="restart">Restart</button>
+      </div>
+    </div>
+  </div>
 
-    <script src="script.js"></script>
 
+  <script src="script.js"></script>
 </body>
 </html>
