--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rock Paper Scissors</title>
-  <link rel="stylesheet" href="style.css">
-
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Ewert&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Lacquer&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock Paper Scissors</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  
-  <div class="container">
-    <h1>Rock Paper Scissors</h1>
-    <div class="buttons">
-      <button id="rock">Rock</button>
-      <button id="paper">Paper</button>
-      <button id="scissors">Scissors</button>
-    </div>
-  </div>
 
-  <script src="./main.js"></script>
+<body>
+
+    <div class="container">
+        <header>
+            <h1>Rock Paper Scissors</h1>
+        </header>
+
+        <main>
+            <button class="rock"><img src="./assets/rock.png" alt=""></button>
+            <button class="paper"><img src="./assets/paper.png" alt="" srcset=""></button>
+            <button class="scissors"><img src="./assets/scissors.png" alt="" srcset=""></button>
+        </main>
+
+    </div>
+
+
+    <script src="./index.js"></script>
 </body>
+
 </html>
